Реализация логики
