# src/main/java/com/example/demo/dao/entity/OutstandingPersonEntity.java
@@ -1,25 +1,22 @@
 package com.example.demo.dao.entity;
 
 import com.example.demo.dao.entity.enums.Gender;
-import com.fasterxml.jackson.annotation.JsonBackReference;
-import com.fasterxml.jackson.annotation.JsonManagedReference;
 import jakarta.persistence.*;
 import lombok.*;
 
-import java.util.Collections;
+import java.time.OffsetDateTime;
+import java.util.HashSet;
 import java.util.Set;
 
 @NoArgsConstructor
-@AllArgsConstructor
 @Setter
 @Getter
 
 @EqualsAndHashCode(onlyExplicitlyIncluded = true)
 @ToString(onlyExplicitlyIncluded = true)
-@Builder
+
 @Entity
 @Table(name = "outstanding_people")
-
 public class OutstandingPersonEntity {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -40,7 +37,6 @@ public class OutstandingPersonEntity {
     private String patronymic;
 
     @Enumerated(EnumType.STRING)
-    @Builder.Default
     @ToString.Include
     private Gender gender = Gender.NOT_SELECTED;
 
@@ -52,41 +48,39 @@ public class OutstandingPersonEntity {
     @ToString.Include
     private Integer yearOfDeath;
 
-    @Column(name = "photo_url")
+    @Column(name = "photo_link")
     @ToString.Include
-    private String photoUrl;
+    private String photoLink;
+
+    @Column(name = "content_type")
+    private String contentType;
 
     @Column(columnDefinition = "TEXT")
     @ToString.Include
     private String biography;
 
-    @Builder.Default
     @ToString.Include
     @Column(name = "is_deleted")
     private Boolean isDeleted = false;
 
-    @ManyToOne
-    @JoinColumn(name = "id_academic_titles")
-    @JsonBackReference
-    private AcademicTitleEntity academicTitles;
+    @Column(name = "deleted_at")
+    private OffsetDateTime deletedAt;
 
-    @ManyToOne
-    @JoinColumn(name = "id_academic_degrees")
-    @JsonBackReference
-    private AcademicDegreeEntity academicDegrees;
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "id_academic_title")
+    private AcademicTitleEntity academicTitle;
 
-    @ManyToOne
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "id_academic_degree")
+    private AcademicDegreeEntity academicDegree;
+
+    @ManyToOne(fetch = FetchType.LAZY)
     @JoinColumn(name = "id_education_subject")
-    @JsonBackReference
     private EducationSubjectEntity educationSubject;
 
     @OneToMany(mappedBy = "person", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
-    @JsonManagedReference
-    @Builder.Default
-    private Set<AchievementEntity> achievements = Collections.emptySet();
+    private Set<AchievementEntity> achievements = new HashSet<>();
 
     @OneToMany(mappedBy = "person", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
-    @JsonManagedReference
-    @Builder.Default
-    private Set<PersonJobEntity> personJob = Collections.emptySet();
+    private Set<PersonJobEntity> personJob = new HashSet<>();
 }
